feat(#03) : fin de la feature avec reorganisation de l'architecture

--- a/src/app/input-form/input-form.component.html
+++ b/src/app/input-form/input-form.component.html
@@ -1,136 +1,1 @@
-<form [formGroup]="inputForm">
-
-    <app-movement-form [controlTechnicalId]="$any(inputForm).controls.technicalId"
-        [controlCreationDateTime]="$any(inputForm).controls.creationDateTime"
-        [controlCreationUserName]="$any(inputForm).controls.creationUserName"
-        [controlDateTime]="$any(inputForm).controls.dateTime"></app-movement-form>
-
-    <h2>Entrée</h2>
-
-    <div class="row g-3 m-2">
-        <div class="col-8">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-3">
-                    <label for="warehouse" class="form-label ">Magasin d'origine</label>
-                </div>
-                <div class="col-lg-3">
-                    <select class="form-select" formControlName="warehouseCode" id="warehouse">
-                        <option selected>{{warehouseCodePlaceholder}}</option>
-                        <option *ngFor="let warehouseCode of warehouseCodes; index as i" [value]="warehouseCode">
-                            {{warehouseCode}}
-                        </option>
-                    </select>
-                </div>
-                <div class="col-12">
-                    <input type="text" class="form-control" formControlName="warehouseLabel">
-                </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-12">
-                    <label for="status" class="form-label">Statut Douanier</label>
-                </div>
-                <div class="col-12">
-                    <select class="form-select" formControlName="customsStatus" id="status">
-                        <option selected>{{customsStatusPlaceholder}}</option>
-                        <option *ngFor="let cs of customsStatus; index as i" [value]="cs">
-                            {{cs}}
-                        </option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row g-3 m-2" formGroupName="merchandise">
-        <div class="col-8">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-3">
-                    <label for="reference" class="form-label">Référence</label>
-                </div>
-                <div class="col-lg-3">
-                    <select class="form-select" formControlName="referenceType" id="reference">
-                        <option selected>{{refTypePlaceholder}}</option>
-                        <option *ngFor="let referenceType of referenceTypes; index as i" [value]="referenceType">
-                            {{referenceType}}
-                        </option>
-                    </select>
-                </div>
-                <div class="col-lg-5">
-                    <input type="number" class="form-control" formControlName="referenceValue">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row g-3 m-2" formGroupName="merchandise">
-        <div class="col-12">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-4">
-                    <label for="description" class="form-label">Nature de la marchandise</label>
-                </div>
-                <div class="col-lg-5">
-                    <input type="text" class="form-control" formControlName="description" id="description">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row g-3 m-2" formGroupName="merchandise">
-        <div class="col-6">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-4">
-                    <label for="quantity" class="form-label">Quantité</label>
-                </div>
-                <div class="col-lg-5">
-                    <input type="number" class="form-control" formControlName="quantity" id="quantity">
-                </div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-4">
-                    <label for="weight" class="form-label">Poids</label>
-                </div>
-                <div class="col-lg-5">
-                    <input type="number" class="form-control" formControlName="weight" id="weight">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row g-3 m-2" formGroupName="merchandise">
-        <div class="col-6">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-4">
-                    <label for="totalQuantity" class="form-label">Quantité totale</label>
-                </div>
-                <div class="col-lg-5">
-                    <input type="number" class="form-control" formControlName="totalQuantity" id="totalQuantity">
-                </div>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="row row-cols-lg-auto align-items-center">
-                <div class="col-lg-4">
-                    <label for="totalWeight" class="form-label">Poids total</label>
-                </div>
-                <div class="col-lg-5">
-                    <input type="number" class="form-control" formControlName="totalWeight" id="totalWeight">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="d-grid gap-2 d-flex justify-content-end mt-5">
-        <button type="submit" class="btn btn-secondary" (click)="onResetForm()">Annuler</button>
-        <button type="submit" class="btn btn-primary" (click)="onSubmitForm()"
-            [disabled]="inputForm.invalid">Envoyer</button>
-    </div>
-</form>
-
-<div *ngIf="alert" class="alert fixed-top mx-auto mt-1 w-50"
-    [ngClass]="alert.type == 'valid' ? 'alert-success': 'alert-danger'" role="alert">
-    {{alert.message}}
-</div>
+<app-common-form></app-common-form>
